[gd_scene load_steps=3 format=3 uid="uid://cwg5stvmsacin"]

[ext_resource type="Theme" uid="uid://up11cs5tn8xo" path="res://menus/menu_theme.tres" id="1_jasrp"]
[ext_resource type="Script" path="res://menus/options_menu/options_menu.gd" id="2_3d5h6"]

[node name="OptionsMenu" type="Panel"]
offset_left = 32.0
offset_top = 304.0
offset_right = 371.0
offset_bottom = 495.0
theme = ExtResource("1_jasrp")
script = ExtResource("2_3d5h6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 14.0
offset_right = -13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Effects Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ControlButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="BackButton" type="Button" parent="VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Back"

[node name="ApplyButton" type="Button" parent="VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Apply"

[connection signal="value_changed" from="VBoxContainer/MasterVolume/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/ControlButtons/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlButtons/ApplyButton" to="." method="_on_apply_button_pressed"]
